--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		<artifactId>json</artifactId>
 		<version>20160810</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.12.1</version>
+	</dependency>
 
   </dependencies>
 
