--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 		<version>1.12.1</version>
 	</dependency>
 
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.7</version>
+	</dependency>
+
   </dependencies>
 
   <build>
