--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,19 @@
 		<optional>true</optional>
 	</dependency>
 
+	<!-- for testing -->
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
+		<exclusions>
+			<exclusion>
+				<groupId>com.vaadin.external.google</groupId>
+				<artifactId>android-json</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
+	<!-- for testing -->
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
